[project]
name = "smn"
version = "0.1.0"
description = "Let's send your minecraft chat to discord!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.8.30",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "idna==3.10",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest-warnings==0.3.1",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "urllib3==2.2.3",
    "discord-py>=2.4.0",
    "structlog>=24.4.0",
    "toml>=0.10.2",
    "watchfiles>=1.0.5",
]
